# horseracing

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  artifacts
api/: pyproject.toml
api/src/horseracing_api/: __init__.py  app.py  backtest.py  deps.py  dispersion.py  queries.py  schemas.py  selection.py
api/tests/: _synth.py  conftest.py
api/tests/integration/: test_calibration_endpoint.py  test_coverage_jobs_api.py  test_data_backing.py  test_diagnostics_api.py  test_health_schema_check.py  test_horse_stats.py  test_horses_api.py  test_importance.py  test_jockey_stats.py  test_jockeys_api.py  test_joint_legacy_parity.py  test_model_switching.py  test_models_api.py  test_odds_api.py  test_openapi_contract.py  test_prediction_explanation.py  test_predictions_api.py  test_predictions_market_q.py  test_profile_edges.py  test_race_horses_jockey_id.py  test_races_api.py  test_readonly_invariant.py  test_recommendation_scope.py  test_recommendations_api.py  test_shadow_log_api.py  test_win_backtest_api.py  test_win_recommendation.py
api/tests/unit/: test_075_provenance.py  test_dispersion_calib_activation.py  test_no_write_boundary.py  test_race_dispersion.py  test_race_divergence.py  test_selection.py  test_shadow_log.py  test_win_backtest.py
betting/: README.md  pyproject.toml
betting/src/horseracing_betting/: __init__.py  __main__.py  backtest.py  calibration_eval.py  cli.py  ev.py  exotic_backtest.py  exotic_divergence.py  exotic_ev.py  exotic_gate.py  exotic_market.py  exotic_recommend.py  exotic_roi.py  exotic_selection.py  exotic_strategies.py  exotic_types.py  kelly_allocation.py  kelly_backtest.py  kelly_recommend.py  kelly_sizing.py  kelly_types.py  recommend.py  roi.py  stage_discount_compare.py  strategies.py
betting/tests/: _synth.py
betting/tests/integration/: test_backtest.py  test_bankroll_backtest.py  test_calib_activation_betting.py  test_calibrated_kelly.py  test_calibrated_product.py  test_exotic_backtest.py  test_exotic_cli.py  test_exotic_divergence.py  test_exotic_divergence_cli.py  test_exotic_gate_cli.py  test_exotic_real_recommend.py  test_exotic_recommend.py  test_kelly_calibration_compare.py  test_kelly_estimated.py  test_kelly_recommend.py  test_pq_grid.py  test_prospective.py  test_recommend.py  test_recommend_serve.py  test_win_kelly_and_topup.py
betting/tests/unit/: test_calibration_leak_guard.py  test_canonical_field.py  test_edge_haircut.py  test_ev_odds_cap.py  test_ev_select.py  test_exotic_divergence.py  test_exotic_ev_select.py  test_exotic_gate.py  test_exotic_real_wiring.py  test_exotic_roi.py  test_exotic_selection.py  test_exotic_strategies.py  test_fl_leak_guard.py  test_kelly_consistency.py  test_kelly_determinism.py  test_kelly_leak_guard.py  test_kelly_sizing.py  test_roi_scoring.py  test_selection_parity.py  test_strategies.py
db/: README.md  alembic.ini  pyproject.toml
db/migrations/: env.py
db/migrations/versions/: 0001_core_schema.py  0002_ingestion_id_schema.py  0003_prediction_contract.py  0004_ingestion_job_counts.py  0005_exotic_odds.py  0006_stake_fraction.py  0007_race_laps.py  0008_prediction_explanation.py  0009_diagnostic_runs.py  0010_raw_column_features.py  0011_model_purpose.py
db/src/horseracing_db/: __init__.py  base.py  constraints.py  enums.py  labels.py  selection.py  session.py  validation.py
db/tests/: conftest.py
db/tests/integration/: _prediction_helpers.py  test_core_constraints.py  test_core_tables.py  test_diagnostic_runs.py  test_exotic_odds_schema.py  test_feature_snapshots.py  test_id_mappings.py  test_ingestion_job_counts.py  test_ingestion_jobs.py  test_label_derivation.py  test_migration_roundtrip.py  test_model_purpose.py  test_model_versions.py  test_odds_overwrite.py  test_prediction_probs.py  test_raw_column_widening.py  test_recommendation_audit.py  test_recommendation_bet_type.py  test_timesplit_and_missing.py
db/tests/unit/: test_validation.py
eval/: README.md  pyproject.toml
eval/src/horseracing_eval/: __init__.py  __main__.py  ablation.py  baselines.py  bootstrap.py  cli.py  consistency.py  dataset.py  decision.py  diagnostics_store.py  dispersion_bands.py  ev_weight_gate.py  feature_eval.py  foldfit.py  harness.py  hashing.py  market_edge.py  metrics.py  operational.py  paired.py  policy_gate.py  predictor.py  report.py  residual_probe.py  segment_edge.py  splits.py  stage_discount.py  stage_discount_eval.py  store.py  subgroups.py
eval/tests/: _fakepredictor.py  _synth.py  test_dispersion_bands.py
eval/tests/integration/: test_ablation.py  test_baseline_eval.py  test_compare.py  test_diagnostics_store.py  test_dispersion_boundary_db.py  test_feature_adoption.py  test_load_eval_races_bulk.py  test_market_edge.py  test_pace_ablation_marketedge.py  test_pace_adoption.py  test_reliability_summary.py  test_segment_edge.py  test_store.py
eval/tests/unit/: test_baselines.py  test_bootstrap.py  test_consistency.py  test_ece_variants.py  test_ev_weight_gate.py  test_gate.py  test_gate_decision.py  test_leak_guard_068.py  test_metrics.py  test_operational.py  test_paired.py  test_paired_subgroups.py  test_policy_gate.py  test_population_masks.py  test_reliability.py  test_residual_probe.py  test_splits_harness.py  test_stage_discount.py  test_stage_discount_eval.py  test_started_all_harness.py  test_subgroup_leak_guard.py  test_subgroups.py  test_winner_nll.py
features/: README.md  pyproject.toml
features/src/horseracing_features/: __init__.py  __main__.py  builder.py  cli.py  encoding.py  (+26 more)
features/tests/: _frames.py  _leakcheck.py  _projection.py  _synth.py  conftest.py
ingest/: README.md  pyproject.toml
ingest/tests/: _sjis.py  conftest.py
live/: pyproject.toml
live/tests/: _synth.py  conftest.py
ops/: pyproject.toml
ops/tests/: _synth.py  conftest.py
probability/: README.md  pyproject.toml
probability/tests/: _synth.py
scrape/: README.md  pyproject.toml
scrape/tests/: _synth.py  conftest.py
serving/: README.md  pyproject.toml
serving/tests/: _synth.py  conftest.py
training/: README.md  pyproject.toml
training/tests/: _synth.py
(+1046 files in other folders)
