[project]
name = "horseracing-betting"
version = "0.1.0"
description = "Single-win EV recommendations and pseudo-ROI backtest over adopted-model predictions"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "horseracing-features",
    "horseracing-eval",
    "horseracing-serving",
    "numpy>=1.26",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }
horseracing-features = { path = "../features", editable = true }
horseracing-eval = { path = "../eval", editable = true }
horseracing-serving = { path = "../serving", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_betting"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
