[project]
name = "horseracing-ingest"
version = "0.1.0"
description = "JRA-VAN / source ingestion pipelines for the horse racing prediction system"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_ingest"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
