[project]
name = "horseracing-live"
version = "0.1.0"
description = "Live serving: predictions + recommendations for upcoming (result-pending) races"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "horseracing-serving",
    "horseracing-betting",
    "horseracing-scrape",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }
horseracing-serving = { path = "../serving", editable = true }
horseracing-betting = { path = "../betting", editable = true }
horseracing-scrape = { path = "../scrape", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_live"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
