[project]
name = "horseracing-ops"
version = "0.1.0"
description = "Write/ingestion ops API + worker (Feature 024) — on-demand netkeiba refresh, separate from the read-only 014 API"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "horseracing-scrape",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }
horseracing-scrape = { path = "../scrape", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_ops"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
# FastAPI's Depends()/Query() in argument defaults is the intended idiom (not a real B008 bug).
"src/horseracing_ops/routers/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
