[project]
name = "horseracing-scrape"
version = "0.1.0"
description = "Polite netkeiba scraping of entries/odds/results into the existing core tables (id_mappings only)"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
    "horseracing-features",   # T011 end-to-end debut (leak-safe) check only
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }
horseracing-features = { path = "../features", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_scrape"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
