[project]
name = "horseracing-serving"
version = "0.1.0"
description = "Prediction serving: load an adopted model and persist calibrated win/top2/top3 for target races"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "horseracing-features",
    "horseracing-eval",
    "horseracing-training",
    "horseracing-probability",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }
horseracing-features = { path = "../features", editable = true }
horseracing-eval = { path = "../eval", editable = true }
horseracing-training = { path = "../training", editable = true }
horseracing-probability = { path = "../probability", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_serving"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
