[project]
name = "horseracing-training"
version = "0.1.0"
description = "Win-model training, calibration, adoption gate and artifacts for the horse racing prediction system"
requires-python = ">=3.12"
dependencies = [
    "horseracing-db",
    "horseracing-features",
    "horseracing-eval",
    "horseracing-probability",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
]

[tool.uv.sources]
horseracing-db = { path = "../db", editable = true }
horseracing-features = { path = "../features", editable = true }
horseracing-eval = { path = "../eval", editable = true }
horseracing-probability = { path = "../probability", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horseracing_training"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real PostgreSQL (testcontainers)",
]
